refactoritzant codi